--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-# Jekyll configuration
+# Jekyll configuration Xixia
 
-name: Xixia
+name: WWW
 description: Welcome to Xixia！
 
 # url is currently only used only for the RSS feed in feed.xml
