--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Jekyll configuration Xixia
 
 name: WWW
-description: Welcome to Xixia！
+description: 欢迎来到这里！
 
-# url is currently only used only for the RSS feed in feed.xml
-url: https://github.com/zxixia/jekyll-xixia
+# url is currently only used only for the RSS feed in feed.xml   https://github.com/zxixia/jekyll-xixia
+url: http://www.yuehul.cn/ 
 
 # baseurl will often be '', but for a project page on gh-pages, it needs to
 # be the project name.
 # *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
 #     run it like so: jekyll serve --baseurl=''
-baseurl: '/jekyll-xixia'
+baseurl: '/'
 ## default date_format
 date_format: 
   title: "%B-%-d-%Y"
