--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Jekyll configuration Xixia
 
-name: WWW
+name: 走走停停
 description: 欢迎来到这里！
 
 # url is currently only used only for the RSS feed in feed.xml   https://github.com/zxixia/jekyll-xixia
